--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <div class="picture-resume-wrapper">
                     <div class="picture-resume">
-                        <span><img src="./Files/1.jpg" alt="" /></span>
+                        <span><img src="./files/1.jpg" alt="" /></span>
                         <svg version="1.1" viewBox="0 0 350 350">
                             <defs>
                                 <filter id="goo">
