--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
                 <div class="section-wrapper clearfix">
                     <h3 class="section-title">Soft Skills</h3> 
+                
                         <div class="skills-carousel">
                             <ul class="word-rotate-y">
                                 <li><span>Orienté solution</span></li>
@@ -202,8 +203,11 @@
                 </div>  
             </div>
             <div class="btn-container">
-                <button class="btn" id="print-button">Imprimer mon CV</button>
+                <a href="files/CV_X.PablosMartin.pdf" class="btn" target="_blank">Télécharger mon CV</a>
             </div>
+            <!-- <div class="btn-container">
+                <button class="btn" id="print-button">Imprimer mon CV</button>
+            </div> -->
             
         </section>
       </div>
