--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>  
             </div>
             <div class="btn-container">
-                <a href="files/CV_X.PablosMartin.pdf" class="btn" target="_blank">Télécharger mon CV</a>
+                <a href="files/CV_X.Pablos_Martin.pdf" class="btn" target="_blank">Télécharger mon CV</a>
             </div>
             <!-- <div class="btn-container">
                 <button class="btn" id="print-button">Imprimer mon CV</button>
