--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <h2>A Propos de moi</h2>
                     <p><span class="bold">Mon parcours</span> a commencé dans les sciences humaines et au conservatoire de musique, avant d'évoluer vers un doctorat en neurosciences cognitives, où j'ai développé mes propres applications en autodidacte. </p>
 
-                        <p>J'ai ensuite rejoint le mouvement de la Poudrière - Emmaüs et ouvert mon cabinet de psychologie et kinésiologie au centre Correspondances</p>
+                        <p>J'ai ensuite rejoint le mouvement de la Poudrière - Emmaüs et ouvert mon cabinet de psychologie et kinésiologie au centre Correspondances.</p>
                         
                         <p>Dans mes moments libres, j'aime vadrouiller et explorer de nouvelles choses, jouer de la guitare ou à des jeux ou me plonger dans un bon livre.</p>    
               </div>
