--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 </div>
                 <div class="clearfix"></div>
                 <div class="contact-presentation">
-                    <p><span class="bold"> Futur diplômé</span> en informatique, je suis à la recherche d’un premier poste en tant qu’analyste développeur. Mon objectif est de mettre en pratique mes compétences en développement logiciel, d’approfondir mes connaissances en analyse fonctionnelle et technique, et de contribuer activement à des projets concrets au sein d’une équipe dynamique.</p>
+                    <p><span class="bold"> Futur diplômé</span> en informatique, je suis à la recherche d’un premier poste en tant qu’analyste développeur. 
+                        Mes objectifs sont d’approfondir mes connaissances en analyse fonctionnelle et de mettre en pratique mes compétences en développement logiciel en contribuant activement à des projets concrets au sein d’une équipe dynamique.</p>
                 </div>
                 <div class="contact-info clearfix">
                     <h2>Contact</h2>
@@ -83,7 +84,7 @@
                 </div>
                
                 <div class="contact-presentation clearfix">
-                    <h2>A Propos de moi</h2>
+                    <h2>A propos de moi</h2>
                     <p><span class="bold">Mon parcours</span> a commencé dans les sciences humaines et au conservatoire de musique, avant d'évoluer vers un doctorat en neurosciences cognitives, où j'ai développé mes propres applications en autodidacte. </p>
 
                         <p>J'ai ensuite rejoint le mouvement de la Poudrière - Emmaüs et ouvert mon cabinet de psychologie et kinésiologie au centre Correspondances.</p>
